# public/swagger.json
@@ -159,35 +159,17 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"_LeanDocument__LeanDocument_T__": {
-				"properties": {},
-				"type": "object"
-			},
-			"Pick__LeanDocument_T_.Exclude_keyof_LeanDocument_T_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested__": {
+			"GetORDER": {
 				"properties": {
-					"_id": {
-						"$ref": "#/components/schemas/_LeanDocument__LeanDocument_T__",
-						"description": "This documents _id."
-					},
-					"__v": {
-						"description": "This documents __v."
-					},
 					"id": {
-						"description": "The string version of this documents _id."
+						"type": "string"
 					}
 				},
+				"required": [
+					"id"
+				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit__LeanDocument_this_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested_": {
-				"$ref": "#/components/schemas/Pick__LeanDocument_T_.Exclude_keyof_LeanDocument_T_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"LeanDocument_this_": {
-				"$ref": "#/components/schemas/Omit__LeanDocument_this_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested_"
-			},
-			"IORDER": {
-				"$ref": "#/components/schemas/LeanDocument_this_"
+				"additionalProperties": false
 			},
 			"SaveUpdateResWAITER": {
 				"properties": {
@@ -366,8 +348,10 @@
 						}
 					}
 				},
+				"description": "You will be able to register but if the user already exists then it will generate 500 error with message User already exist",
+				"summary": "You will be able to register user and generate the accessToken with it",
 				"tags": [
-					"Order"
+					"order"
 				],
 				"security": [
 					{
@@ -400,7 +384,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/IORDER"
+										"$ref": "#/components/schemas/SaveUpdateResORDER"
 									},
 									"type": "array"
 								}
@@ -409,7 +393,7 @@
 					}
 				},
 				"tags": [
-					"Order"
+					"order"
 				],
 				"security": [
 					{
@@ -417,6 +401,71 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/Order/getallorderlist": {
+			"post": {
+				"operationId": "GetallorderList",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/SaveUpdateResORDER"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"order"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/Order/AcceptOrder": {
+			"post": {
+				"operationId": "Accpetadmin",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SaveUpdateResORDER"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"order"
+				],
+				"security": [
+					{
+						"api_key": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GetORDER"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/Waiter/saveWaiter": {
@@ -514,6 +563,31 @@
 						}
 					}
 				}
+			}
+		},
+		"/queue/orderinqueue": {
+			"post": {
+				"operationId": "Orderinqueue",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/SaveUpdateResORDER"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"queue"
+				],
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
